--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -1,1 +1,15 @@
 // This is an empty scss file for your custom styles - Please add your super duper awesome mega design styles here
+@import url('https://fonts.googleapis.com/css?family=Lato:900&display=swap');
+
+body {
+	font-family: 'Lato', sans-serif;
+}
+
+p {
+	font-family: sans-serif;
+}
+
+#main a {
+	text-decoration: underline;
+}
+
