display category element

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -41,3 +41,7 @@ h1, h2, h3, .navbar-brand {
 	line-height: 1.3em;
 	padding: 0 20px;
 }
+
+.splot-screenshot{
+	box-shadow:  3px 3px 7px 0 rgba(222,222,222,.4);
+}
