shift to WYSIWYG editor

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -51,4 +51,5 @@ h1, h2, h3, .navbar-brand {
 	border-bottom: 5px solid $yellow;
 	padding-bottom: 20px;
 	margin-bottom: 20px;
+	background-color: #efefef;
 }
