--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -28,7 +28,7 @@ h1, h2, h3, .navbar-brand {
 }
 
 .btn-splot:hover{
-	background-color: #efefef;
+	background-color: #ffffff;
 }
 
 #main a.btn-splot {
@@ -50,6 +50,7 @@ h1, h2, h3, .navbar-brand {
 	margin-top: 40px;
 	border-bottom: 5px solid $yellow;
 	padding-bottom: 20px;
+	padding-top: 20px;
 	margin-bottom: 20px;
 	background-color: #efefef;
 }
