--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -49,8 +49,7 @@ h1, h2, h3, .navbar-brand {
 .splot-meta {
 	margin-top: 40px;
 	border-bottom: 5px solid $yellow;
-	padding-bottom: 20px;
-	padding-top: 20px;
+	padding: 20px;
 	margin-bottom: 20px;
 	background-color: #efefef;
 }
