better splot shortcode display

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -68,3 +68,9 @@ h1, h2, h3, .navbar-brand {
 	margin-top: 60px;
 	margin-bottom: 20px;
 }
+
+.splot-thumb {
+	max-height: 400px;
+	width: 100%;
+	overflow: hidden;
+}
