--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -81,4 +81,15 @@ h1, h2, h3, .navbar-brand {
 	margin-bottom: 40px;
 	border-radius: 0;
 	overflow: hidden;
+	border: 4px solid #fff;
+	box-shadow:  3px 3px 7px 0 rgba(222,222,222,.4);
 }
+
+.splot-card:hover{
+	border: 4px solid $yellow;
+}
+
+
+[data-id="13"] {
+	display: none;
+	}
