--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -74,7 +74,8 @@ h1, h2, h3, .navbar-brand {
 	width: 400px;
 	overflow: hidden;
 	display: block;
-	background-size: cover;	
+	background-size: cover;
+	background-position: center;	
 }
 
 .splot-card {
