--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -84,6 +84,7 @@ h1, h2, h3, .navbar-brand {
 	overflow: hidden;
 	border: 4px solid #fff;
 	box-shadow:  3px 3px 7px 0 rgba(222,222,222,.4);
+	transition: all .3s;
 }
 
 .splot-card:hover{
